Grammer corrected in REST endpoint's name
